--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "loader-utils": "^2.0.0",
     "raw-loader": "^3.1.0",
     "terser-webpack-plugin": "^2.2.1",
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.2.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
